--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Envió de información a api de sitrack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
